; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/extr_dma.c_dma_tickle.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/extr_dma.c_dma_tickle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@dma_idle = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@NSTREAMS_PER_CONTROLLER = common dso_local global i64 0, align 8
@SYSTICK_DISPATCH_DMA = common dso_local global i32 0, align 4
@dma_idle_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @dma_tickle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dma_tickle(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dma_idle, i32 0, i32 0), align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @NSTREAMS_PER_CONTROLLER, align 8
  %6 = icmp slt i64 %4, %5
  %7 = zext i1 %6 to i64
  %8 = select i1 %6, i32 0, i32 1
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %3, i64 %9
  store i32 1, i32* %10, align 4
  %11 = load i32, i32* @SYSTICK_DISPATCH_DMA, align 4
  %12 = load i32, i32* @dma_idle_handler, align 4
  %13 = call i32 @systick_enable_dispatch(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @systick_enable_dispatch(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
